Create Form Improvements

--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -1,13 +1,7 @@
 <section data-ng-controller="DealsController" data-ng-init="fillStats()">
-
-
-
     <div class=" footer">
-
         <!--<div class="row">-->
-
         <div class="col-lg-6 stats-box">
-
             <div class="row">
                 <div class="col-xs-4">
                     <h1 class="pull-right">
@@ -25,10 +19,8 @@
                     <span class="text-muted">Deals Today</span>
                 </div>
             </div>
-
         </div>
         <div class="col-lg-6 stats-box">
-
             <div class="row">
                 <div class="col-xs-4">
                     <h1 class="pull-right">
@@ -46,13 +38,9 @@
                     <span class="text-muted">Total Deals</span>
                 </div>
             </div>
-
         </div>
-
         <section data-ng-controller="SettingsController">
-
             <div class="col-lg-6 stats-box">
-
                 <div class="row">
                     <div class="col-xs-4">
                         <h1 class="pull-right">
@@ -70,10 +58,8 @@
                         <span class="text-muted">Users Joined Today</span>
                     </div>
                 </div>
-
             </div>
             <div class="col-lg-6 stats-box">
-
                 <div class="row">
                     <div class="col-xs-4">
                         <h1 class="pull-right">
@@ -91,60 +77,47 @@
                         <span class="text-muted">Total Users</span>
                     </div>
                 </div>
-
             </div>
         </section>
-
-        <!-- <section data-ng-controller="CommentsController" data-ng-init="find()">
-
-
-            <div class="col-lg-6 stats-box">
-
-                <div class="row">
-                    <div class="col-xs-4">
-                        <h1 class="pull-right">
+        <!-- <section data-ng-controller="CommentsController" data-ng-init="find()"> -->
+        <div class="col-lg-6 stats-box">
+            <div class="row">
+                <div class="col-xs-4">
+                    <h1 class="pull-right">
                             <button type="button" class="btn btn-warning" ng-class="alert.colour">
                                 <i class="glyphicon glyphicon-comment" style="color:black" ng-class="alert.icon"></i>
                             </button>
                         </h1>
-                    </div>
-                    <div class="col-xs-8">
-                        <h1>{{numOfCommentsToday.count}}</h1>
-                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-xs-8 col-xs-offset-4">
-                        <span class="text-muted">Comments Today</span>
-                    </div>
+                <div class="col-xs-8">
+                    <!-- <h1>{{numOfCommentsToday.count}}</h1> -->
                 </div>
-
             </div>
-            <div class="col-lg-6 stats-box">
-
-                <div class="row">
-                    <div class="col-xs-4">
-                        <h1 class="pull-right">
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-4">
+                    <span class="text-muted">Comments Today</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 stats-box">
+            <div class="row">
+                <div class="col-xs-4">
+                    <h1 class="pull-right">
                             <button type="button" class="btn btn-warning" ng-class="alert.colour">
                                 <i class="glyphicon glyphicon-comment" style="color:black" ng-class="alert.icon"></i>
                             </button>
                         </h1>
-                    </div>
-                    <div class="col-xs-8">
-                        <h1>{{numOfComments.count}}</h1>
-                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-xs-8 col-xs-offset-4">
-                        <span class="text-muted">Total Comments</span>
-                    </div>
+                <div class="col-xs-8">
+                    <!-- <h1>{{numOfComments.count}}</h1> -->
                 </div>
-
             </div>
-
-        </section> -->
-
-
-
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-4">
+                    <span class="text-muted">Total Comments</span>
+                </div>
+            </div>
+        </div>
+        <!-- </section> -->
     </div>
-
 </section>
