--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,75 +1,87 @@
 .content {
-  margin-top: 50px;
+    margin-top: 50px;
 }
+
 .undecorated-link:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
+
 [ng\:cloak],
 [ng-cloak],
 [x-ng-cloak],
 .ng-cloak,
 .x-ng-cloak {
-  display: none !important;
+    display: none !important;
 }
+
 .header-profile-image {
-  opacity: 0.8;
-  height: 28px;
-  width: 28px;
-  border-radius: 50%;
-  margin-right: 5px;
+    opacity: 0.8;
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    margin-right: 5px;
 }
+
 .open .header-profile-image,
 a:hover .header-profile-image {
-  opacity: 1;
+    opacity: 1;
 }
+
 .user-header-dropdown-toggle {
-  padding-top: 11px !important;
-  padding-bottom: 11px !important;
+    padding-top: 11px !important;
+    padding-bottom: 11px !important;
 }
+
 .error-text {
-  display: none;
+    display: none;
 }
+
 .has-error .help-block.error-text {
-  display: block;
+    display: block;
 }
+
 .has-error .help-inline.error-text {
-  display: inline;
+    display: inline;
 }
 
-.body a{
-
+.body a {
     transition: color 0.3s ease-in-out;
 }
 
 .content {
-  margin-top: 50px;
+    margin-top: 50px;
 }
-.container{
 
+.container {
     /*padding: 0px;*/
-
 }
-
 
 .undecorated-link:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-  display: none !important;
+
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+    display: none !important;
 }
+
 .ng-invalid.ng-dirty {
-  border-color: #FA787E;
+    border-color: #FA787E;
 }
+
 .ng-valid.ng-dirty {
-  border-color: #78FA89;
+    border-color: #78FA89;
 }
 
 body {
-  background-color: #eeeeee;
+    background-color: #eeeeee;
 }
 
-.footer{
-
+.footer {
     padding: 20px;
     background-color: #464745;
     /*border-top: #eeeeee 20px solid;*/
@@ -78,154 +90,107 @@ body {
     height: 350px;
     width: 1140px;
     margin: 0px auto;
-
     margin-top: 20px;
     margin-bottom: 20px;
-
     -moz-border-radius: 10px;
     border-radius: 10px;
-
-
 }
 
-.stats-box{
-
+.stats-box {
     height: 95px;
-
-
-
 }
 
-#below-navbar{
-
+#below-navbar {
     /*min-height: 50px;*/
     /*border: #000000 1px solid;*/
     padding-left: 15px;
     padding-top: 10px;
     background-color: #EEEEEE;
-
 }
 
-.main-deals{
-
-    height: 2300px;
+.main-deals {
+    height: 2370px;
     /*border: #000000 1px solid;*/
     padding: 15px;
     background-color: #FFFFFF;
     border-top: #dddddd 1px solid;
     border-bottom: #dddddd 1px solid;
     border-left: #dddddd 1px solid;
-
     -moz-border-radius-bottomleft: 10px;
     -moz-border-radius-topleft: 10px;
-
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-
 }
-.right-column{
 
-    min-height: 2300px;
+.right-column {
+    min-height: 2370px;
     padding: 15px;
     background-color: #FFFFFF;
     border-top: #dddddd 1px solid;
     border-bottom: #dddddd 1px solid;
     border-right: #dddddd 1px solid;
     border-right: 1px solid #DDDDDD;
-
     -moz-border-radius-bottomright: 10px;
     -moz-border-radius-topright: 10px;
-
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-
-
 }
 
-.right-column-inner-one{
-
-
-    border: 1px solid #DDDDDD;
-    padding-left: 0px;
-    height: 410px;
-    margin-bottom: 10px;
-
-}
-
-.right-column-inner-two{
-
-
+.right-column-inner-one {
     border: 1px solid #DDDDDD;
     padding-left: 0px;
     height: 410px;
     margin-bottom: 10px;
 }
 
-.right-column-inner-three{
-
-
+.right-column-inner-two {
     border: 1px solid #DDDDDD;
     padding-left: 0px;
     height: 410px;
     margin-bottom: 10px;
-
 }
 
-.list-group-home-deals .list-group-item{
+.right-column-inner-three {
+    border: 1px solid #DDDDDD;
+    padding-left: 0px;
+    height: 410px;
+    margin-bottom: 10px;
+}
 
+.list-group-home-deals .list-group-item {
     /*padding: 10px;*/
     height: 200px;
     margin-bottom: 10px;
-    
 }
 
-.list-group-item-heading{
-
+.list-group-item-heading {
     display: inline-block;
     vertical-align: middle;
     margin-top: 20px;
-
 }
 
-
-
-
-
-.navabar-padding-20{
-
+.navabar-padding-20 {
     margin-left: 20px;
-
 }
-
-
-
-
 
 .dropdown-menu {
-
     background: #008F82;
     color: #FFFFFF;
     border-top: 0px solid rgba(0, 0, 0, 0.15);
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-    border-right : 1px solid rgba(0, 0, 0, 0.15);
-    border-left : 1px solid rgba(0, 0, 0, 0.15);
-
+    border-right: 1px solid rgba(0, 0, 0, 0.15);
+    border-left: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .dropdown-menu > li > a {
-
     color: #FFFFFF;
-
 }
 
 .navbar-nav > li > .dropdown-menu {
-
     text-transform: uppercase;
-
 }
 
-.nav-tabs > li > a{
-
+.nav-tabs > li > a {
     background-color: #888885;
     display: block;
     text-decoration: none;
@@ -235,303 +200,243 @@ body {
     margin-right: 5px;
 }
 
-.nav-tabs > li{
-
+.nav-tabs > li {
     margin-bottom: -4px;
     border-bottom: 2px solid #FFFFFF;
-    z-index:9;
-
+    z-index: 9;
 }
 
 .nav-tabs > li > a:hover,
 .nav-tabs > li > a:active {
-
     background-color: #464745;
-
-
 }
 
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
-.navbar-default .navbar-nav > .open > a:focus{
-
+.navbar-default .navbar-nav > .open > a:focus {
     color: #FFFFFF;
     background: #008F82;
     vertical-align: middle;
-
 }
 
-.nav-tabs > li > a:focus{
-
+.nav-tabs > li > a:focus {
     background-color: #888885;
-
 }
 
-#below-navbar{
-
+#below-navbar {
     /*background-color: transparent;*/
     width: 100%;
 }
 
-.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
-
+.nav .open > a,
+.nav .open > a:hover,
+.nav .open > a:focus {
     background-color: #464745;
-
 }
 
-.sub-header{
-
+.sub-header {
     background-color: #000066;
-
 }
 
-#left-box{
-
+#left-box {
     height: 180px;
     /*background-color: #0040D0;*/
     border-right: 1px solid #DDDDDD;
-
 }
-.middle-box{
 
+.middle-box {
     /*padding: 5px;*/
     height: 180px;
     padding: 0 !important;
     margin: 0 !important;
-
 }
 
-.right-box{
-
+.right-box {
     /*padding: 5px;*/
     height: 180px;
-    border-left: 1px solid #DDDDDD;
-
     padding: 0 !important;
     margin: 0 !important;
-
 }
 
-.deal-votes > h1{
-
+.deal-votes > h1 {
     height: 50px;
     width: 120px;
     text-align: center;
     line-height: 50px;
     vertical-align: middle;
-
 }
 
-.left-box-one{
-
+.left-box-one {
     /*border: 1px solid #000000;*/
-
     height: 80px;
     text-align: center;
     vertical-align: text-top;
-
-
 }
-.left-box-two{
 
+.left-box-two {
     /*border: 1px solid #000000;*/
-
     margin: 0 auto;
     vertical-align: text-top;
-
-
 }
 
-.hot-cold-buttons{
-
+.hot-cold-buttons {
     margin: 0px auto;
     display: inline-block;
     vertical-align: middle;
     width: 100%;
-
 }
 
-.no-padding-left{
-
+.no-padding-left {
     padding-left: 0px;
     margin-left: -15px;
-
 }
 
 .btn-group-vertical {
-
     margin: 2px;
-
 }
 
-.middle-title{
-
+.middle-title {
     height: 50px;
     font-weight: bold;
     font-size: 18px;
-
 }
 
-.middle-product-details{
-
+.middle-product-details {
     height: 96px;
     display: block;
     word-wrap: break-word;
     -moz-hyphens: auto;
-
-
 }
-.middle-post-details{
 
-    height:34px;
+.middle-post-details {
+    height: 34px;
     display: block;
     word-wrap: break-word;
     -moz-hyphens: auto;
     margin-top: 10px;
-
-
 }
 
-.middle-posted-by{
-
+.middle-posted-by {
     color: #888885;
     font-size: 10px;
-
 }
 
-.middle-time-of-posting{
-
+.middle-time-of-posting {
     color: #888885;
     font-size: 10px;
     text-align: center;
     display: block;
-
 }
 
-#hottest-tabs{
-
+#hottest-tabs {
     float: left;
-
 }
 
-#submit-tabs{
-
+#submit-tabs {
     float: right;
-
 }
 
-.pagination{
-
+.pagination {
     padding: 3px;
-
 }
 
-.spotlight-deal{
-
+.spotlight-deal {
     height: 200px;
     margin-bottom: 10px;
     border: 1px solid #dddddd;
-
 }
 
-.body-content{
-
+.body-content {
     background-color: #FFFFFF;
-
 }
 
-.new-deal-form label{
-
-
+.new-deal-form label {
     margin: 10px;
     text-transform: capitalize;
-
 }
 
-.new-deal-form .controls{
-
-
+.new-deal-form .controls {
     margin: 10px;
-
 }
 
-.sub-label{
-
+.sub-label {
     padding: 2px;
     margin-left: 5px;
-
 }
 
-.padding-radio{
+.padding-radio {
     padding: 10px;
 }
 
-.create-deal-image-upload{
-
+.create-deal-image-upload {
     /*border: 1px solid #dddddd;*/
     height: 700px;
     margin-top: 10px;
-
-
 }
 
-.create-deal-image-detais{
-
+.create-deal-image-details {
     height: 350px;
     background-color: #EEEEEE;
-
+    margin-left: 10px;
+    height: 300px
 }
 
-.create-deal-image-preview{
-
+.create-deal-image-preview {
     background-color: #FFFFFF;
     height: 350px;
     border: 10px solid #EEEEEE;
-
-
 }
 
-.create-body{
-
+.create-body {
     background-color: #FFFFFF;
-
     -moz-border-radius-bottomleft: 10px;
     -moz-border-radius-topleft: 10px;
-
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-
     -moz-border-radius-bottomright: 10px;
     -moz-border-radius-topright: 10px;
-
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-
     border-top: #dddddd 1px solid;
     border-bottom: #dddddd 1px solid;
     border-left: #dddddd 1px solid;
     border-right: #dddddd 1px solid;
-
 }
 
-.create-button{
+.form-create {
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
+.form-group {
+    padding-left: 30px;
+    padding-bottom: 5px;
+}
+
+.form-labels {
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
+.sub-label {
+    padding-top: 10px;
+}
+
+
+}
+.create-button {
     padding: 3px;
-
 }
-
-.buttons-cancel-submit{
-
+.buttons-cancel-submit {
     padding-left: 150px;
-
 }
-
-
-
+.navbar {
+    border-top: #008F82 4px solid;
+    transition: color 0.3s ease-in-out;
+}
 .navbar-default .navbar-nav > li > a {
-
     color: #FFFFFF;
-
     display: block;
     line-height: 30px;
     text-decoration: none;
@@ -542,11 +447,10 @@ body {
     font-size: 14px;
     vertical-align: middle;
     transition: color 0.3s ease-in-out;
-
 }
-
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:active {
-
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li > a:active {
     line-height: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -555,14 +459,9 @@ body {
     font-size: 14px;
     font-family: "DinCondensedMedium", Helvetica, Arial, Sans-serif;
     color: #464745;
-
-
 }
-
 .navbar-default .navbar-brand {
-
     color: #FFFFFF;
-
     display: block;
     line-height: 30px;
     text-decoration: none;
@@ -573,395 +472,261 @@ body {
     text-transform: uppercase;
     font-size: 18px;
     vertical-align: middle;
-
 }
-
-.navbar-default .navbar-brand:hover{
-
+.navbar-default .navbar-brand:hover {
     color: #FFFFFF;
-
 }
-
-.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand{
-
+.navbar > .container .navbar-brand,
+.navbar > .container-fluid .navbar-brand {
     margin-left: 0px;
-
 }
-
 .navbar-default {
-
     border-top: #008F82 4px solid;
     vertical-align: middle;
-
-
 }
-
 .navbar-default .navbar-nav > li > a {
-
     font-family: "DinCondensedMedium", Helvetica, Arial, Sans-serif;
     color: #F5F5F5;
     text-transform: uppercase;
     vertical-align: middle;
     font-size: 14px;
-
 }
-
 .navbar-nav > li {
-
     line-height: 30px;
     text-decoration: none;
     vertical-align: middle;
-
 }
 
 /*.navbar .divider-vertical {*/
-    /*height: 30px;*/
-    /*margin: 0 9px;*/
-    /*border-right: 1px solid #ffffff;*/
-    /*border-left: 1px solid #f2f2f2;*/
+
+/*height: 30px;*/
+
+/*margin: 0 9px;*/
+
+/*border-right: 1px solid #ffffff;*/
+
+/*border-left: 1px solid #f2f2f2;*/
+
 /*}*/
-
-.navbar-right{
-
+.navbar-right {
     padding-right: 20px;
-
 }
-
 .navbar-inverse .divider-vertical {
     border-right-color: #222222;
     border-left-color: #111111;
 }
-
 @media (max-width: 767px) {
     .navbar-collapse .nav > .divider-vertical {
         display: none;
     }
 }
-
-.dotted-border-right{
-
+.dotted-border-right {
     /*border-right: 1px dotted #E6E6E6;*/
     /*line-height: 30px;*/
-
-
 }
-
-.link-button .btn{
-
+.link-button .btn {
     width: 110px;
     margin: 5px;
-
 }
-
-.link-button{
-
+.link-button {
     text-align: center;
     margin: 0 auto;
     padding-top: 10px;
-
 }
-
-.link-button-home{
-
+.link-button-home {
     text-align: center;
     margin: 0 auto;
     padding-top: 10px;
     margin-left: 10px;
-
 }
-
-#deal-main-view{
-
+#deal-main-view {
     height: 600px;
     /*border: #000000 1px solid;*/
+    
     padding: 15px;
     background-color: #FFFFFF;
     border-top: #dddddd 1px solid;
     border-bottom: #dddddd 1px solid;
-    border-left: #dddddd 1px solid;
-
+    /*border-left: #dddddd 1px solid;*/
 }
-
-.deal-main-view-right-column{
-
+.deal-main-view-right-column {
     height: 600px;
     padding: 15px;
     background-color: #FFFFFF;
     border-top: #dddddd 1px solid;
     border-bottom: #dddddd 1px solid;
     border-right: #dddddd 1px solid;
-
-
 }
-
-.deal-main-view-left{
-
+.deal-main-view-left {
     height: 550px;
     margin: 10px;
     /*border: 1px solid #dddddd;*/
-
 }
-
-.deal-main-view-right-column-inner-one{
-
-
+.deal-main-view-right-column-inner-one {
     height: 550px;
     margin: 10px;
     border-left: #dddddd 1px solid;
-
 }
-
-.deal-main-view-left-left{
-
+.deal-main-view-left-left {
     border-right: #dddddd 1px solid;
     height: 530px;
     margin-top: 10px;
     margin-bottom: 10px;
     padding-left: 0px;
-
 }
-
-.deal-main-view-left-middle{
-
+.deal-main-view-left-middle {
     height: 530px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
-
-.deal-main-view-left-right{
-
-    border-left: #dddddd 1px solid;
+.deal-main-view-left-right {
+    /*border-left: #dddddd 1px solid;*/
+    
     height: 530px;
     margin-top: 10px;
     padding: 0px;
-
-
 }
-
-.deal-main-view-left-box-one{
-
+.deal-main-view-left-box-one {
     /*border: 1px solid #000000;*/
-
+    
     height: 80px;
     text-align: center;
     vertical-align: text-top;
-
-
 }
-.deal-main-view-left-box-two{
-
+.deal-main-view-left-box-two {
     /*border: 1px solid #000000;*/
-
+    
     margin: 0 auto;
     vertical-align: text-top;
-
-
 }
-
-.deal-main-view-deal-image{
-
+.deal-main-view-deal-image {
     margin-top: 10px;
-    
 }
-
-.deal-main-view-deal-link .btn{
-
+.deal-main-view-deal-link .btn {
     width: 110px;
     margin: 5px;
-
 }
-
-.deal-main-view-deal-link .btn:hover{
-
+.deal-main-view-deal-link .btn:hover {
     text-decoration: none;
 }
-
-.deal-main-view-deal-link{
-
+.deal-main-view-deal-link {
     text-align: center;
     margin: 0 auto;
     padding-top: 10px;
-
 }
-
-.deal-details-right-tab{
-
+.deal-details-right-tab {
     height: 150px;
-
 }
-
-.view-single-deal-main{
-
+.view-single-deal-main {
     background-color: #FFFFFF;
-
 }
-
-.list-group-home-single{
-
+.list-group-home-single {
     padding: 10px;
     height: 600px;
     margin-bottom: 10px;
     border: #dddddd 1px solid;
-
 }
-
-#single-left-box{
-
+#single-left-box {
     height: 580px;
     /*background-color: #0040D0;*/
+    
     border-right: 1px solid #DDDDDD;
-
 }
-#single-middle-box{
-
+#single-middle-box {
     /*padding: 5px;*/
+    
     height: 580px;
-
 }
-
-#single-right-box{
-
+#single-right-box {
     /*padding: 5px;*/
+    
     height: 580px;
     border-left: 1px solid #DDDDDD;
-
 }
-
-.single-middle-title{
-
+.single-middle-title {
     height: 50px;
     font-weight: bold;
     font-size: 18px;
-
 }
-
-.single-middle-product-details{
-
+.single-middle-product-details {
     height: 500px;
     display: block;
     word-wrap: break-word;
     -moz-hyphens: auto;
-
 }
-
-.single-middle-posted-by{
-
+.single-middle-posted-by {
     color: #888885;
     font-size: 10px;
-
 }
-
-.single-middle-time-of-posting{
-
+.single-middle-time-of-posting {
     color: #888885;
     font-size: 10px;
     text-align: center;
     display: block;
-
 }
-
 .home-short-text {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    line-height: 16px;     /* fallback */
-    max-height: 96px;      /* fallback */
-    -webkit-line-clamp: 6; /* number of lines to show */
+    line-height: 16px;
+    /* fallback */
+    
+    max-height: 96px;
+    /* fallback */
+    
+    -webkit-line-clamp: 6;
+    /* number of lines to show */
+    
     -webkit-box-orient: vertical;
 }
-
-.comments-box-under-deal{
-
+.comments-box-under-deal {
     padding: 10px;
-
 }
 
 /*Comments*/
-
-.comment-box-single{
-
+.comment-box-single {
     min-height: 100px;
     margin: 10px;
-
     -moz-border-radius-bottomright: 5px;
     -moz-border-radius-topright: 5px;
-
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-
 }
-
-.comment-box-left{
-
-
+.comment-box-left {}
+.comment-box-right {}
+.comment-box-middle {}
+.comment-box-middle-top {
+    /*height: 120px;*/
 }
-.comment-box-right{
-
-
-}
-.comment-box-middle{
-
-
-}
-.comment-box-middle-top{
-
-  /*height: 120px;*/
-
-}
-.comment-box-middle-bottom{
-
-
-}
-
-.pagination{
-
+.comment-box-middle-bottom {}
+.pagination {
     margin: 0px;
-
-    
 }
-
-.vote-up-button{
-
+.vote-up-button {
     margin-bottom: 5px;
-
 }
-
-.vote-down-button{
-
+.vote-down-button {
     margin-top: 5px;
-
 }
-
-.username{
-
+.username {
     color: #0000ee;
     font-weight: bold;
-
 }
-
 .social-buttons {
-
     margin: 2px;
-
 }
-
 .thumbnail {
-
     width: 120px;
     height: 120px;
     margin-left: 15px;
     margin-bottom: 0px;
-
 }
-
 .left-box-three {
-
     position: absolute;
     right: 20px;
     bottom: 0;
     text-align: center;
     margin: 0px auto;
-
 }
 
 /*Comments*/
