--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,12 +1,12 @@
-<div class="col-sm-12" id="below-navbar">
-
-    <ul class="nav nav-tabs img-rounded" id="hottest-tabs">
-        <li role="presentation" class="active"><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Hottest </a>
-        </li>
-
-        <li role="presentation"><a href="#"><i class="glyphicon glyphicon-arrow-up"></i> Newest </a></li>
-
-        <li role="presentation" class="dropdown">
+<section data-ng-controller="DealsController" ng-init="find()">
+    <div class="col-sm-12" id="below-navbar">
+        <ul class="nav nav-tabs img-rounded" id="hottest-tabs">
+            <li role="presentation" class="active"><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Hottest </a>
+            </li>
+            <li role="presentation"><a href="#"><i class="glyphicon glyphicon-arrow-up"></i> Newest </a></li>
+            <li role="presentation"><a href="#"><i class="glyphicon glyphicon-star"></i> retailers </a></li>
+            <!-- // Create retailers section with gridview of different retailers. -->
+            <!-- <li role="presentation" class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                aria-expanded="false">
                 <i class="glyphicon glyphicon-star"></i> Retailers <span class="caret"></span>
@@ -21,182 +21,92 @@
                 <li role="presentation"><a href="#">Lidl</a></li>
                 <li role="presentation"><a href="#">Aldi</a></li>
             </ul>
-        </li>
-
-
-    </ul>
-
-
-    <ul class="nav nav-tabs " id="submit-tabs">
-        <!--<li role="presentation"><input type="text" ng-model="search" class="form-control" placeholder="Search"></li>-->
-        <li role="presentation"><a href="/deals/create"><i class="glyphicon glyphicon-plus-sign"></i> Submit </a></li>
-    </ul>
-
-
-</div>
-
-
-<section data-ng-controller="HomeController">
-
-
-    <section data-ng-controller="DealsController as dealsCTRL" data-ng-init="find()">
-
+        </li> -->
+        </ul>
+        <ul class="nav nav-tabs " id="submit-tabs">
+            <!--<li role="presentation"><input type="text" ng-model="search" class="form-control" placeholder="Search"></li>-->
+            <li role="presentation"><a href="/deals/create"><i class="glyphicon glyphicon-plus-sign"></i> Submit </a></li>
+        </ul>
+    </div>
+    <section data-ng-controller="HomeController">
         <div class="col-lg-9 main-deals">
-
             <!--Deals Array Start-->
-
             <div class="col-lg-12 spotlight-deal">
-
                 <h1>{{dealsCount}}</h1>
-
-
             </div>
-
             <!--Deals Array End-->
-
             <!--Deals Array Start-->
-
             <div class="list-group-home-deals">
-
                 <div class="spotlight-deal">
-
-
                 </div>
+                <div class="list-group">
+                    <div ng-repeat="deal in deals" class="list-group-item">
 
-                
-
-                <div dir-paginate="deal in deals|filter:search|itemsPerPage:10" class="list-group-item">
-
-                    <div class="col-lg-12 no-padding-left">
-
-                        <div class="col-lg-2 right-box">
-
-                            <div class="col-md-12 deal-votes">
-
-                                <!-- <h1>{{deal.votes}}</h1> -->
-
-                            </div>
-
-                            <div class="col-md-12 deal-link link-button-home">
-
-                                <!--<button class="btn btn-default "><i class="glyphicon glyphicon-thumbs-up"></i> Like</button>-->
-
-                                <div class="btn-group-vertical hot-cold-buttons" role="group"
-                                     aria-label="Vertical button group">
-
-                                    <button type="button" class="btn btn-danger  vote-up-button"><i
-                                            class="glyphicon glyphicon-arrow-up"></i> Hot
-                                    </button>
-
-                                    <button type="button" class="btn btn-default"><i
-                                            class="glyphicon glyphicon-arrow-down  vote-down-button"></i> Cold
-                                    </button>
-
+                        <div class="col-lg-12 no-padding-left">
+                            <div class="col-lg-2 right-box">
+                                <div class="col-md-12 deal-votes">
+                                    <h1>{{deal.votes}}</h1>
                                 </div>
-
+                                <div class="col-md-12 deal-link link-button-home">
+                                    <!--<button class="btn btn-default "><i class="glyphicon glyphicon-thumbs-up"></i> Like</button>-->
+                                    <div class="btn-group-vertical hot-cold-buttons" role="group" aria-label="Vertical button group">
+                                        <button type="button" class="btn btn-danger  vote-up-button"><i class="glyphicon glyphicon-arrow-up"></i> Hot
+                                        </button>
+                                        <button type="button" class="btn btn-default"><i class="glyphicon glyphicon-arrow-down  vote-down-button"></i> Cold
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
-
-
+                            <div class="col-lg-8 middle-box">
+                                <div class="col-lg-12 middle-title">
+                                    <h4 data-ng-bind="deal.title +' (&euro;'+  deal.price +' @ '+  deal.retailer+')'"></h4>
+                                </div>
+                                <div class="col-lg-12 middle-product-details home-short-text">
+                                    <p>{{deal.details}}</p>
+                                </div>
+                                <div class="col-lg-12 middle-post-details">
+                                    <div class="col-lg-6 middle-posted-by">Posted By <span class="username" data-ng-bind="deal.user.displayName"></span></div>
+                                    <div class="col-lg-6 middle-time-of-posting">Posted On <span data-ng-bind="deal.created | date:'mediumDate'"></span></div>
+                                </div>
+                                <!--<small class="list-group-item-text">-->
+                                <!--Posted on-->
+                                <!--<span data-ng-bind="deal.created | date:'medium'"></span>-->
+                                <!--by-->
+                                <!--<span data-ng-bind="deal.user.displayName"></span>-->
+                                <!--</small>-->
+                            </div>
+                            <div class="col-lg-2" id="right-box">
+                                <div class="col-md-12 deal-image thumbnail centred-image"><img src="{{deal.urlimage}}" />
+                                </div>
+                                <a data-ng-href="deals/{{deal._id}}" class="col-md-12 deal-link link-button">
+                                    <button class="btn btn-success"><i class="glyphicon glyphicon-euro"></i> Save </button>
+                                </a>
+                            </div>
                         </div>
-
-                        <div class="col-lg-8 middle-box">
-
-
-                            <div class="col-lg-12 middle-title"><h4
-                                    data-ng-bind="deal.title +' (&euro;'+  deal.price +' @ '+  deal.retailer+')'"></h4>
-                            </div>
-
-                            <div class="col-lg-12 middle-product-details home-short-text"><p>{{deal.details}}</p></div>
-
-                            <div class="col-lg-12 middle-post-details">
-
-                                <div class="col-lg-6 middle-posted-by">Posted By  <span class="username"
-                                        data-ng-bind="deal.user.displayName"></span></div>
-                                <div class="col-lg-6 middle-time-of-posting">Posted On <span
-                                        data-ng-bind="deal.created | date:'mediumDate'"></span></div>
-
-                            </div>
-
-
-                            <!--<small class="list-group-item-text">-->
-                            <!--Posted on-->
-                            <!--<span data-ng-bind="deal.created | date:'medium'"></span>-->
-                            <!--by-->
-                            <!--<span data-ng-bind="deal.user.displayName"></span>-->
-                            <!--</small>-->
-
-
-                        </div>
-
-                        <div class="col-lg-2" id="right-box">
-
-                            <div class="col-md-12 deal-image thumbnail centred-image"><img src="{{deal.urlimage}}"/>
-
-                            </div>
-
-                            <a data-ng-href="/deals/{{deal._id}}" class="col-md-12 deal-link link-button">
-                                <button class="btn btn-success"><i class="glyphicon glyphicon-euro"></i> Save </button>
-                            </a>
-
-
-                        </div>
-
                     </div>
-
-
                 </div>
-
-
-              
-
-
+                <div class="alert alert-warning text-center" ng-if="deals.$resolved && !deals.length">
+                    No deals yet, why don't you <a ui-sref="deals.create">create one</a>?
+                </div>
             </div>
-
             <!--Deals Array End-->
-
-
             <div class="alert alert-warning text-center" data-ng-hide="!deals.$resolved || deals.length">
                 No Deals yet, why don't you <a href="/#!/deals/create">create one</a>?
             </div>
-
             <!--Deals Array End-->
-
-
         </div>
-
         <div class="col-lg-3 right-column">
-
             <div class="col-lg-12 right-column-inner-one">
-
-
             </div>
-
             <div class="col-lg-12 right-column-inner-two">
-
-
             </div>
-
             <div class="col-lg-12 right-column-inner-three">
-
-
             </div>
-
-
         </div>
-
-
         <div class="col-lg-9 ">
-
-
             <div class="text-center">
-                <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)"
-                                         template-url="dirPagination.tpl.html"></dir-pagination-controls>
+                <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="dirPagination.tpl.html"></dir-pagination-controls>
             </div>
-
-
         </div>
-
-
     </section>
-
 </section>
